# quaestor

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt
frontend/: README.md  package.json  vue.config.js
frontend/src/: App.vue  globals.ts  main.ts  shims-vue-pdf.d.ts
frontend/src/components/: HelloWorld.vue
frontend/src/router/: index.ts
frontend/src/views/: Create.vue  List.vue
src/: main.rs  tera_engine.rs
templates/: template.html  template.html.tera
templates/translations/: de-DE.ftl  en-US.ftl
