[package]
name = "quaestor"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["serve", "json"] }
chrono = "0.4.19"
serde = "1.0.125"
tokio = { version = "1.4", features = ["rt-multi-thread", "process", "macros"] }
tera = "1.7"
lazy_static = "1.4"
base64 = "0.13.0"
serde_json = "1"
fluent = "0.15.0"
fluent-bundle = "0.15.0"
unic-langid = { version = "0.9.0", features = ["macros"] }
intl-memoizer = "0.5.1"
pulldown-cmark = { version = "0.8.0", default-features = false }